Fix after #100362